version 2.0
 * added support for setting custom content-type to adapter map
 * added support for setting bespoke rendering of null value labels via config property 'restfixture.null.value.representation'
 * added 'comment' command row so that it's possible to comment RestFixtures; example |comment| the value of 'replaceme' is %replaceme% |
 
version 2.0.beta.1
 * added support for SLIM
 * added support for expressions in JavaScript for JSON
 * abandoned local variable store for FitNesse symbols
 * added a toggle button to collapse on/off large content cells
 * added metric build to gather some metrics of the RestFixture code

version 1.1.1
 * bug fix: setHeader now parses multi-line headers
 * API change: added setHeaders (syntactic sugar for multi-line headers)
 
 version 1.1
 * added namespaces support on matcher queries

 version 1.0
 * first fully usable release
