@@ -2,7 +2,8 @@ version 2.0
  * added support for setting custom content-type to adapter map
  * added support for setting bespoke rendering of null value labels via config property 'restfixture.null.value.representation'
  * added 'comment' command row so that it's possible to comment RestFixtures; example |comment| the value of 'replaceme' is %replaceme% |
- 
+ * added the ability of specifying absolute URLs as values of the resource cell in a verb row
+  
 version 2.0.beta.1
  * added support for SLIM
  * added support for expressions in JavaScript for JSON
